# SoulTuner-Agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DEEPDIVE_RETRIEVAL_2026-06.md  ARCHITECTURE_REVIEW_2026-06.md  DEPLOYMENT_PROFILES.md  Dockerfile  Feature_Walkthrough.md  LICENSE  README.ch.md  README.md  README_EN.md  ROADMAP.md  Technical_Report.md  docker-compose.gpu.yml  docker-compose.searxng.yml  docker-compose.yml  ingest_tags_to_neo4j.py  pyproject.toml  requirements-ci.txt  requirements-demo.txt  requirements.txt  soultuner.ps1  start.py  startup_all.py
agent/: README.md  catalog_gap.py  music_agent.py  music_graph.py  music_tool_registry.py  netease_query.py  retrieval_fallback.py  tool_orchestrator.py  web_discovery.py
api/: README.md  security.py  server.py  start_server.py  user_portrait.py  user_profile.py
config/: README.md  searxng_settings.yml  settings.py  settings.yml
data/: README.md
demos/: public_gradio_app.py
deploy/: README.md
graphzep_service/: .dockerignore.ts  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  ZEP_IMPLEMENTATION_SUMMARY.md  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package.json  tsconfig.json
llms/: README.md  base.py  chat_models.py  multi_llm.py  prompts.py  registry.py  siliconflow_llm.py
retrieval/: README.md  acoustic_probe.py  alignment_calibration.py  audio_embedder.py  clamp3_embedder.py  cross_encoder_reranker.py  data_flywheel.py  gssc_context_builder.py  history.py  hybrid_retrieval.py  muq_embedder.py  music_journey.py  neo4j_client.py  portable_m2d.py  post_recall_adjustments.py  recall_sources.py  retrieval_fusion.py  user_memory.py  web_supplement.py
schemas/: README.md  dialog_state.py  journey_plan.py  music_state.py  planner_decision.py  query_plan.py  refinement.py  tool_plan.py
scripts/: README.md  api_contract_check.py  check_neo4j.py  doctor.py  download_models.py  generate_alignment_hyde_variants.py  p11_backfill_catalog_metadata.py  p11_catalog_neo4j_audit.py  p11_data_flywheel_audit.py  p11_prepare_online_ingest.py  p11_sync_knowledge_cache.py  p15_deprecate_legacy_knowledge_sources.py  p15_enrich_music_knowledge.py  p15_knowledge_source_audit.py  p15_repair_online_acquired_metadata.py  p16_backfill_acoustic_probe.py  p7_smoke.py  p9_p14_smoke.py  replay_feedback.py  reset_user_data.py  start_sglang.sh  start_vllm.bat  start_vllm.sh  train_alignment_adapter.py  train_alignment_calibration.py  verify_user_isolation.py
services/: README.md  __init__.py  catalog_diagnostics.py  catalog_enrichment.py  feedback_diagnostics.py  feedback_logger.py  (+29 more)
(+333 files in other folders)
